deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: test2
  name: test2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test2
    spec:
      containers:
      - image: gridacr1246213.azurecr.io/grid-capstone:4a615e382c5d2a9cb34df2d2a1efd27d3ffaac18
        name: hello-world
        resources: {}
      imagePullSecrets:
      - name: tokensecret
status: {}
