service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-test-service
spec:
  selector:
    app: test2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
