ingress.yml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver-v2-secure
  annotations:
    cert-manager.io/cluster-issuer: production
spec:
  ingressClassName: external-nginx
  rules:
    - host: piachsecki.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-grid-capstone-service
                port:
                  number: 8080
  tls:
    - hosts:
        - piachsecki.tech
      secretName: echo-devopsbyexample-com
